@@ -177,6 +177,7 @@ Version 1.5.3beta11 [June 11, 2011]
     it is to build on libpng 1.4.
   Removed string/memory macros that are no longer used and are not
     necessarily fully supportable, particularly png_strncpy and png_snprintf.
+  Added log option to pngvalid.c and attempted to improve gamma messages.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net:
 (subscription required; visit
